# DrumMachine

./: .gitignore  CMakeLists.txt  README.md  instr.mkd
python/: testingCoutputs.py  wavConverter.py  wavPlots.py  wav_to_h.py
src/: CMakeLists.txt  a.out  for_testing.txt  main.c  samples.c  samples.h  sine_wave_i2s.c  test.c
src/samples_bin/: BD_bin  CH_bin  CL_bin  CY_bin  HC_bin  HT_bin  LC_bin  MA_bin  MC_bin  MT_bin  RS_bin  SD_bin
